# MightMagic

./: Cargo.toml  README.md
examples/: Cargo.toml  mightmagic_console.rs
res/factions/: castle.json  fortress.json  necropolis.json  stronghold.json  tower.json
src/: Cargo.toml  lib.rs
src/loaders/: faction_loader.rs  mod.rs
src/managers/: resource_manager.rs
src/models/: faction.rs  mod.rs  player.rs  resource.rs
